--- a/index.css
+++ b/index.css
@@ -21,8 +21,8 @@
     --line-height-normal: 1.7;
     --line-height-small: 1.2;
 
-    --black: #000;
-    --pink: #ff3258;
+    --black: #2e2e2e;
+    --primary-color: #61759;
     --white: #f0e9f2;
     --white-1: #e5e5e6da;
 
